# fmri_preprocessing

./: .gitignore  .pre-commit-config.yaml  README.md  acparams_hcp.txt  pyproject.toml
scripts/: intermediate-files_SPM-coregister2T1_nii-format.sh
src/preprocessing/: bold2T1_wf.py  bold_nuisance_correction_wf.py  erase_intermetiate_files.py  extract_wm_csf_eroded_masks.sh  intermediate-files_SPM-coregister2T1_nii-format.sh  preprocessing_parallelized.py  preprocessing_parallelized_RMM.py  preprocessing_parallelized_bbhi.py  setup_fsl_env.sh
